feat: started creation of dashboard feat: user menu, dashboard and header component

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,23 @@
-<p>dashboard works!</p>
+<main>
+    <section class="content">
+        <h2>Contracts for Client</h2>
+        <div class="filter-area">
+            <span class="input">
+                <mat-icon>search</mat-icon>
+                <input type="text" placeholder="Search" />
+            </span>
+            <button
+                mat-flat-button
+                color="primary"
+                class="button-overrides shadow-button"
+            >
+                <mat-icon>add</mat-icon> New Hire
+            </button>
+
+            <button mat-flat-button class="button-overrides grey-button">
+                <mat-icon>tune</mat-icon> Filters
+                <mat-icon>expand_more</mat-icon>
+            </button>
+        </div>
+    </section>
+</main>
