--- a/src/app/styles/_resets.scss
+++ b/src/app/styles/_resets.scss
@@ -131,3 +131,13 @@ button {
     background-color: inherit;
     border: none;
 }
+a {
+    text-decoration: none;
+    color: inherit;
+}
+* {
+    box-sizing: border-box;
+}
+input:focus-visible {
+    outline: none;
+}
