--- a/src/app/styles/_buttons.scss
+++ b/src/app/styles/_buttons.scss
@@ -3,12 +3,15 @@
 }
 .button-overrides {
     @include type18Regular;
-    height: 52px;
+    height: 58px;
+    .mat-button-wrapper:not(.mat-icon) {
+        font-family: $fontFamily;
+    }
 }
-.grey-button {
+.button-grey {
     background-color: $grey200;
     color: $grey900;
 }
-.shadow-button {
+.button-shadow {
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
 }
