--- a/src/app/styles/_typography.scss
+++ b/src/app/styles/_typography.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+$fontFamily: 'Lato', sans-serif;
 * {
-    font-family: 'Lato', sans-serif;
+    font-family: $fontFamily;
 }
 
 @mixin type18Regular {
