--- a/src/app/styles/components/_dashboard.scss
+++ b/src/app/styles/components/_dashboard.scss
@@ -17,34 +17,17 @@ main {
             padding: $spacing-10 0;
             @include type32Bold;
         }
-        .filter-area {
-            display: grid;
-            width: 100%;
-            align-items: center;
-            grid-template-columns: 5fr 1.3fr 1fr;
-            grid-gap: 0 1rem;
-            .input {
-                display: flex;
-                align-items: center;
+        .filters {
+            .filters__row {
                 width: 100%;
-                height: $formComponentsHeight;
-                background-color: #fff;
-                border: 0.5px solid #989b9b;
-                border-radius: 5px;
-                padding: $spacing-03;
-                .mat-icon {
-                    color: #989b9b;
-                    height: 36px;
-                    width: 41px;
-                    font-size: 35px;
-                    opacity: 0.6;
+                grid-gap: 0 1rem;
+
+                &.first-row {
+                    display: grid;
+                    grid-template-columns: 4fr 1.4fr 1fr;
                 }
-                input {
-                    border: none;
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 5px;
-                    @include type16regular;
+                &.second-row {
+                    display: flex;
                 }
             }
         }
