--- a/src/app/components/user-menu/user-menu.component.html
+++ b/src/app/components/user-menu/user-menu.component.html
@@ -2,6 +2,6 @@
     <img src="assets/users/admin.png" alt="Signed user photo" />
 </button>
 <mat-menu #usermenu="matMenu">
-    <button mat-menu-item>Account</button>
-    <button mat-menu-item>Logout</button>
+    <button mat-menu-item><mat-icon>person</mat-icon> Account</button>
+    <button mat-menu-item><mat-icon>logout</mat-icon>Logout</button>
 </mat-menu>
