--- a/src/app/components/input-text/input-text.component.html
+++ b/src/app/components/input-text/input-text.component.html
@@ -1,5 +1,5 @@
 <mat-form-field appearance="outline" class="ontop-form-field">
     <mat-label>{{ label }}</mat-label>
-    <input matInput />
+    <input matInput [formControl]="formControl" />
     <mat-icon matPrefix>{{ icon }}</mat-icon>
 </mat-form-field>
