--- a/src/app/styles/components/_form-field.scss
+++ b/src/app/styles/components/_form-field.scss
@@ -7,4 +7,7 @@
     .mat-form-field-outline {
         background-color: #fff;
     }
+    .mat-form-field-label {
+        min-height: 22px;
+    }
 }
