--- a/src/app/styles/_index.scss
+++ b/src/app/styles/_index.scss
@@ -1,2 +1,3 @@
-@import 'typography', 'resets', 'colors', 'spacing', 'buttons', 'common';
+@import 'typography', 'resets', 'colors', 'spacing', 'buttons', 'common',
+    'mat-table-responsive';
 @import 'components';
