--- a/src/app/styles/components/_index.scss
+++ b/src/app/styles/components/_index.scss
@@ -1,1 +1,2 @@
-@import 'dashboard', 'header', 'user-menu', 'form-field', 'table';
+@import 'dashboard', 'header', 'user-menu', 'form-field', 'table',
+    'dialog-client-options';
