--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="data">
+<table mat-table matTableResponsive [dataSource]="data">
     <ng-container
         *ngFor="let column of columns"
         [matColumnDef]="column.columnDef"
@@ -28,11 +28,19 @@
             </span>
             <span *ngIf="column.switchCase === 'menu'">
                 <button
+                    class="desktop-context-menu-button"
                     mat-icon-button
-                    aria-label="vertical three dot icon"
                     [matMenuTriggerFor]="contextmenu"
                 >
                     <mat-icon>more_vert</mat-icon>
+                </button>
+                <button
+                    mat-flat-button
+                    color="basic"
+                    class="mobile-context-menu-button button-overrides button-shadow"
+                    (click)="openDialog()"
+                >
+                    <mat-icon>settings</mat-icon> Options
                 </button>
                 <mat-menu #contextmenu="matMenu">
                     <button mat-menu-item class="context-menu">
