--- a/src/app/styles/_typography.scss
+++ b/src/app/styles/_typography.scss
@@ -17,7 +17,7 @@ $fontFamily: 'Lato', sans-serif;
     line-height: 112%;
 }
 
-@mixin type16regular {
+@mixin type16Regular {
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
@@ -28,4 +28,10 @@ $fontFamily: 'Lato', sans-serif;
     font-size: 16px;
     line-height: 125%;
     letter-spacing: 0.25px;
+}
+@mixin type14Regular {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.1px;
 }
