--- a/src/app/styles/components/_dashboard.scss
+++ b/src/app/styles/components/_dashboard.scss
@@ -1,7 +1,7 @@
 main {
     width: 100vw;
     min-height: 100vh;
-    padding: $headerHeight 5% 0;
+    padding: $headerHeight 5% 2rem;
     background-color: $backgroundColor;
     display: flex;
     justify-content: center;
@@ -28,6 +28,13 @@ main {
                     z-index: 5;
                     display: grid;
                     grid-template-columns: 4fr 1.4fr 1fr;
+                    @media (max-width: 768px) {
+                        display: flex;
+                        flex-direction: column;
+                        grid-gap: $spacing-05;
+                        padding-bottom: $spacing-05;
+                        background-color: $backgroundColor;
+                    }
                 }
                 &.second-row {
                     display: grid;
@@ -37,6 +44,12 @@ main {
                     transform: translateY(-80px);
                     transition: all 200ms ease-in-out;
                     opacity: 0;
+                    @media (max-width: 768px) {
+                        display: flex;
+                        flex-direction: column;
+                        padding-bottom: $spacing-05;
+                        transform: translateY(-304px);
+                    }
                     &.show {
                         transform: translateY(0);
                         opacity: 1;
@@ -48,6 +61,9 @@ main {
             width: 100%;
             transform: translateY(-80px);
             transition: all 200ms ease-in-out;
+            @media (max-width: 768px) {
+                transform: translateY(-304px);
+            }
             &.filters-open {
                 transform: translateY(0);
                 opacity: 1;
