improv: changed filter logic

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -73,7 +73,7 @@
             class="table-container"
             [ngClass]="{ 'filters-open': showFilters }"
         >
-            <app-table [data]="clients" [columns]="tableColumns"></app-table>
+            <app-table [data]="dataSource" [columns]="tableColumns"></app-table>
         </div>
     </section>
 </main>
