--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -37,7 +37,7 @@
                 <button
                     mat-flat-button
                     color="basic"
-                    class="mobile-context-menu-button button-overrides button-shadow"
+                    class="mobile-context-menu-button button-shadow"
                     (click)="openDialog()"
                 >
                     <mat-icon>settings</mat-icon> Options
