--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -20,3 +20,6 @@ $grey900: #1c0b11;
 
 $grey400SVG: invert(59%) sepia(0%) saturate(99%) hue-rotate(168deg)
     brightness(91%) contrast(92%);
+
+$whiteSVG: invert(100%) sepia(86%) saturate(0%) hue-rotate(91deg)
+    brightness(112%) contrast(100%);
