--- a/src/app/styles/_index.scss
+++ b/src/app/styles/_index.scss
@@ -1,3 +1,3 @@
 @import 'typography', 'resets', 'colors', 'spacing', 'buttons', 'common',
-    'mat-table-responsive';
+    'mat-table-responsive', 'breakpoints';
 @import 'components';
