--- a/src/app/styles/_mat-table-responsive.scss
+++ b/src/app/styles/_mat-table-responsive.scss
@@ -30,13 +30,25 @@
 
         .mat-row {
             height: auto;
+            border-radius: 5px;
 
             td.mat-cell:not(.mat-column-actions) {
                 display: grid;
                 grid-template-columns: 50% 50%;
-                padding: 0.5rem;
+                padding: 1rem;
                 text-align: right;
                 word-break: break-word;
+                border-bottom: none;
+
+                &:last-of-type {
+                    padding: 0;
+                }
+                &:first-of-type {
+                    grid-template-columns: 45% 55%;
+                }
+                &:nth-child(2n) {
+                    background-color: #e9e9e994;
+                }
 
                 & > * {
                     grid-column: 2;
@@ -45,7 +57,8 @@
                 &:before {
                     content: attr(data-column-name);
                     text-align: left;
-                    font-weight: 500;
+                    font-weight: 700;
+                    font-family: $fontFamily;
                 }
             }
 
@@ -64,7 +77,7 @@
             }
 
             &:not(:last-of-type) td:last-of-type {
-                border-bottom: 0.5rem solid #fafafa;
+                border-bottom: 2rem solid #f9f9f9;
             }
         }
     }
