added chat button

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -71,4 +71,7 @@
             <app-table [data]="dataSource" [columns]="tableColumns"></app-table>
         </div>
     </section>
+    <button mat-flat-button class="button-overrides chat-button">
+        <img src="assets/icons/chat-icon.svg" />
+    </button>
 </main>
