--- a/src/app/styles/components/_dashboard.scss
+++ b/src/app/styles/components/_dashboard.scss
@@ -5,6 +5,7 @@ main {
     background-color: $backgroundColor;
     display: flex;
     justify-content: center;
+    position: relative;
     section.content {
         width: 100%;
         max-width: 1440px;
@@ -68,6 +69,22 @@ main {
                 transform: translateY(0);
                 opacity: 1;
             }
+        }
+    }
+    button.chat-button {
+        position: fixed;
+        top: calc(100vh - 100px);
+        right: 1rem;
+        background-color: $primary500;
+        border-radius: 50%;
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+        display: block;
+        width: 80px;
+        height: 80px;
+        transition: transform 200ms ease-in-out;
+        &:hover {
+            cursor: pointer;
+            transform: translateY(-5px);
         }
     }
 }
